@@ -7,7 +7,7 @@ Rgas=286.0;
 rhoref=1;
 aref=300;
 
-Mx=4.0;
+Mx=3.0;
 My=0.0;
 P=10200;
 T=300;
@@ -212,8 +212,8 @@ Init(
 
 Disc(
   NavierStokesPerfect(
-    zetaA1=0.0e0;    {conditions the eigenvalue of the A jacobian}
-    zetaA2=0.01e0;     {conditions eigenvalues so they don't go out of bound; set to 0.1-0.5}
+    zetaA1=0.05e0;    {conditions the eigenvalue of the A jacobian}
+    zetaA2=0.003e0;     {conditions eigenvalues so they don't go out of bound; set to 0.1-0.5}
   );
   MUSCL(
     FLUX=FLUX_FDS;
