@@ -14,7 +14,7 @@ meshfact=0.5;
 Hlayer=0.0007/(P/Rgas/T)/2;
 H=0.1;
 L=1.0;
-CFLmax=1.0;
+CFLmax=2.0;
 
   is=1;  js=1; jm=round(60*meshfact);
   ie=round(81*meshfact); je=round(101*meshfact);
@@ -121,10 +121,10 @@ Disc(
     AOWENO_gammalo=0.85;
     AOWENO_gammahi=0.85;
     INTERPOL=INTERPOL_TVD2_VANLEER;
-    EIGENVALCOND=EIGENVALCOND_PARENT;
-    POSFILTER=POSFILTER_PARENT;
+    EIGENVALCOND=EIGENVALCOND_PECLET;
+    POSFILTER=POSFILTER_NONE;
     POSFILTER_numiter=4;
-    FACEINTEG=FACEINTEG_CENTRAL1;
+    FACEINTEG=FACEINTEG_CENTRAL3;
   );
   MUSCLplus(
     FLUX=FLUX_FDSplusMultiD;
@@ -259,7 +259,7 @@ Cycle(
     if (iter==1,
       CFL=0.01;
     );
-    CFL=min(CFL*1.01,CFLmax);
+    CFL=min(CFL*1.02,CFLmax);
     UpdateFluid(CFL,PRECONDITIONER,sigma1,sigma2);
     { dtau=1e-7; {pseudotime step in seconds}
       UpdateFluidConstantPseudotimeStep(dtau); }
