@@ -1567,10 +1567,9 @@ void condition_Lambda_plus_minus_Parent_firstpass(np_t *np, gl_t *gl, long lp0, 
   }
 }
 
-
 void condition_Lambda_plus_minus_Parent(np_t *np, gl_t *gl, long lp0, long theta, jacvars_t jacvarsp0, jacvars_t jacvarsp1, metrics_t metrics,  sqmat_t Lambdaplus, sqmat_t Lambdaminus){
   long flux;
-  double Vadd1,Vadd2,Vadd,sum;
+  double Vadd1,Vadd2,Vadd,Vmin,Vmax;
   flux_t LUstarp0,LUstarp1;
 
   condition_Lambda_plus_minus_Pascal(np, gl, lp0, theta, jacvarsp0, jacvarsp1, metrics,  Lambdaplus, Lambdaminus);
@@ -1579,15 +1578,29 @@ void condition_Lambda_plus_minus_Parent(np_t *np, gl_t *gl, long lp0, long theta
   find_LUstar_from_jacvars(jacvarsp1, metrics, LUstarp1);
   find_LUstar_from_jacvars(jacvarsp0, metrics, LUstarp0);
 
-  sum=0.0;
-  for (flux=0; flux<fluxet-2; flux++) sum+=Lambdaplus[flux][flux]*LUstarp0[flux];
-  Vadd1=max(0.0,fabs(sum-Lambdaplus[fluxet-2][fluxet-2]*LUstarp0[fluxet-2])-(Lambdaplus[fluxet][fluxet]*LUstarp0[fluxet]+Lambdaplus[fluxet-1][fluxet-1]*LUstarp0[fluxet-1]))/LUstarp0[fluxet];
+  Vmin=1e99;
+  Vmax=-1e99;
+  for (flux=0; flux<nf; flux++) {
+    if (flux!=fluxet && flux!=fluxet-1) Vmin=min(Vmin,Lambdaplus[flux][flux]*LUstarp0[flux]);
+  }
+  for (flux=0; flux<nf; flux++) {
+    if (flux!=fluxet && flux!=fluxet-1) Vmax=max(Vmax,Lambdaplus[flux][flux]*LUstarp0[flux]);
+  }
+  Vadd1=max(0.0,fabs(Vmax-Vmin)-(Lambdaplus[fluxet][fluxet]*LUstarp0[fluxet]+Lambdaplus[fluxet-1][fluxet-1]*LUstarp0[fluxet-1]))/LUstarp0[fluxet];
 
-  sum=0.0;
-  for (flux=0; flux<fluxet-2; flux++) sum+=Lambdaminus[flux][flux]*LUstarp1[flux];
-  Vadd2=max(0.0,fabs(sum-Lambdaminus[fluxet-2][fluxet-2]*LUstarp1[fluxet-2])-fabs(Lambdaminus[fluxet][fluxet]*LUstarp1[fluxet]+Lambdaminus[fluxet-1][fluxet-1]*LUstarp1[fluxet-1]))/LUstarp1[fluxet];
+  Vmin=1e99;
+  Vmax=-1e99;
+  for (flux=0; flux<nf; flux++) {
+    if (flux!=fluxet && flux!=fluxet-1) Vmin=min(Vmin,-Lambdaminus[flux][flux]*LUstarp1[flux]);
+  }
+  for (flux=0; flux<nf; flux++) {
+    if (flux!=fluxet && flux!=fluxet-1) Vmax=max(Vmax,-Lambdaminus[flux][flux]*LUstarp1[flux]);
+  }
+  Vadd2=max(0.0,fabs(Vmax-Vmin)-fabs(Lambdaminus[fluxet][fluxet]*LUstarp1[fluxet]+Lambdaminus[fluxet-1][fluxet-1]*LUstarp1[fluxet-1]))/LUstarp1[fluxet];
 
   Vadd=max(Vadd1,Vadd2);
+
+
 
   for (flux=fluxet-1; flux<=fluxet; flux++){
     Lambdaplus[flux][flux]+=0.5*Vadd;
@@ -1595,6 +1608,51 @@ void condition_Lambda_plus_minus_Parent(np_t *np, gl_t *gl, long lp0, long theta
   }
 
 }
+
+
+
+void condition_Lambda_plus_minus_Parent5(np_t *np, gl_t *gl, long lp0, long theta, jacvars_t jacvarsp0, jacvars_t jacvarsp1, metrics_t metrics,  sqmat_t Lambdaplus, sqmat_t Lambdaminus){
+  long flux;
+  double Vadd1,Vadd2,Vadd,Vmin,Vmax;
+  flux_t LUstarp0,LUstarp1;
+
+  condition_Lambda_plus_minus_Pascal(np, gl, lp0, theta, jacvarsp0, jacvarsp1, metrics,  Lambdaplus, Lambdaminus);
+
+  /* make sure the flux is positivity-preserving in multiple dimensions by conditioning the eigenvalues */
+  find_LUstar_from_jacvars(jacvarsp1, metrics, LUstarp1);
+  find_LUstar_from_jacvars(jacvarsp0, metrics, LUstarp0);
+
+  Vmin=1e99;
+  Vmax=-1e99;
+  for (flux=0; flux<nf; flux++) {
+    if (flux!=fluxet && flux!=fluxet-1) Vmin=min(Vmin,Lambdaplus[flux][flux]*LUstarp0[flux]);
+  }
+  for (flux=0; flux<nf; flux++) {
+    if (flux!=fluxet && flux!=fluxet-1) Vmax=max(Vmax,Lambdaplus[flux][flux]*LUstarp0[flux]);
+  }
+  Vadd1=max(0.0,fabs(Vmax-Vmin)-(Lambdaplus[fluxet][fluxet]*LUstarp0[fluxet]+Lambdaplus[fluxet-1][fluxet-1]*LUstarp0[fluxet-1]))/LUstarp0[fluxet];
+
+  Vmin=1e99;
+  Vmax=-1e99;
+  for (flux=0; flux<nf; flux++) {
+    if (flux!=fluxet && flux!=fluxet-1) Vmin=min(Vmin,-Lambdaminus[flux][flux]*LUstarp1[flux]);
+  }
+  for (flux=0; flux<nf; flux++) {
+    if (flux!=fluxet && flux!=fluxet-1) Vmax=max(Vmax,-Lambdaminus[flux][flux]*LUstarp1[flux]);
+  }
+  Vadd2=max(0.0,fabs(Vmax-Vmin)-fabs(Lambdaminus[fluxet][fluxet]*LUstarp1[fluxet]+Lambdaminus[fluxet-1][fluxet-1]*LUstarp1[fluxet-1]))/LUstarp1[fluxet];
+
+  Vadd=max(Vadd1,Vadd2);
+
+
+
+  for (flux=fluxet-1; flux<=fluxet; flux++){
+    Lambdaplus[flux][flux]+=0.5*Vadd;
+    Lambdaminus[flux][flux]-=0.5*Vadd;
+  }
+
+}
+
 
 
 void condition_Lambda_plus_minus_Parent4(np_t *np, gl_t *gl, long lp0, long theta, jacvars_t jacvarsp0, jacvars_t jacvarsp1, metrics_t metrics,  sqmat_t Lambdaplus, sqmat_t Lambdaminus){
